setup and page structure

--- a/index.html
+++ b/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/2.png"
+    />
+    <link rel="stylesheet" href="src/style.css" />
+    <title>Conference ticket generator</title>
+  </head>
+  <body>
+    <div class="mainContainer">
+      <header>
+        <figure style="width: 30%;">
+          <img src="assets/images/logo-full.svg" alt="">
+        </figure>
+      </header>
+      <main>
+        <section>
+          <h1>Your Journey to Coding Conf 2025 Starts Here!</h1>
+          <p>Secure your spot at next at next year’s biggest coding Conference </p>
+        </section>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/2.png">
-  
-  <title> Conference ticket generator</title>
+      </main>
+      <footer></footer>
+    </div>
 
-</head>
-<body>
+    <!-- Form starts -->
 
-  <!-- Form starts -->
+    <!-- Form ends -->
 
+    <!-- Generated tickets starts -->
 
-  <!-- Form ends -->
+    Congrats,
+    <!-- Full Name -->! Your ticket is ready. We've emailed your ticket to
+    <!-- Email Address -->
+    and will send updates in the run up to the event. Coding Conf Jan 31, 2025 /
+    Austin, TX
 
-  <!-- Generated tickets starts -->
+    <!-- Generated tickets ends -->
 
-  Congrats, <!-- Full Name -->! Your ticket is ready.
-
-  We've emailed your ticket to <!-- Email Address --> and will send updates in the run up to the event.
-
-  Coding Conf
-  Jan 31, 2025 / Austin, TX
-
-  <!-- Generated tickets ends -->
-  
-    Coded by <a href="#">Ahmed Fawzy</a>.
-</body>
+    <!-- Coded by <a href="#">Ahmed Fawzy</a>. -->
+  </body>
 </html>
